--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -178,29 +178,31 @@ endif()
 get_property(LIB_DEPS GLOBAL PROPERTY DNNL_LIB_DEPS)
 get_property(STATIC_LIB_DEPS GLOBAL PROPERTY DNNL_SUBDIR_EXTRA_STATIC_LIBS)
 get_property(SHARED_LIB_DEPS GLOBAL PROPERTY DNNL_SUBDIR_EXTRA_SHARED_LIBS)
-add_library(${DNNL_LIBRARY_NAME} ${DNNL_LIBRARY_TYPE}
+add_library(${LIB_PACKAGE_NAME} ${DNNL_LIBRARY_TYPE}
     ${VERSION_RESOURCE_FILE} ${HEADERS_ROOT} ${HEADERS_SUBDIR} ${LIB_DEPS})
+
 # LINK_PRIVATE for cmake 2.8.11 compatibility
-target_link_libraries(${DNNL_LIBRARY_NAME} LINK_PRIVATE ${${DNNL_LIBRARY_NAME}_INTERFACE} ${STATIC_LIB_DEPS} ${SHARED_LIB_DEPS})
+target_link_libraries(${LIB_PACKAGE_NAME} LINK_PRIVATE ${${LIB_PACKAGE_NAME}_INTERFACE} ${STATIC_LIB_DEPS} ${SHARED_LIB_DEPS})
 
-set_property(TARGET ${DNNL_LIBRARY_NAME} PROPERTY VERSION "${DNNL_VERSION_MAJOR}.${DNNL_VERSION_MINOR}")
-set_property(TARGET ${DNNL_LIBRARY_NAME} PROPERTY SOVERSION "${DNNL_VERSION_MAJOR}")
+set_property(TARGET ${LIB_PACKAGE_NAME} PROPERTY OUTPUT_NAME ${DNNL_LIBRARY_NAME})
+set_property(TARGET ${LIB_PACKAGE_NAME} PROPERTY VERSION "${DNNL_VERSION_MAJOR}.${DNNL_VERSION_MINOR}")
+set_property(TARGET ${LIB_PACKAGE_NAME} PROPERTY SOVERSION "${DNNL_VERSION_MAJOR}")
 
-target_include_directories(${DNNL_LIBRARY_NAME} PUBLIC
+target_include_directories(${LIB_PACKAGE_NAME} PUBLIC
     $<BUILD_INTERFACE:${PROJECT_BINARY_DIR}/include>
     $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/../include>
     $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
     )
 
-target_link_libraries_build(${DNNL_LIBRARY_NAME}
+target_link_libraries_build(${LIB_PACKAGE_NAME}
     "${EXTRA_SHARED_LIBS};${EXTRA_STATIC_LIBS}")
-target_link_libraries_install(${DNNL_LIBRARY_NAME} "${EXTRA_SHARED_LIBS}")
+target_link_libraries_install(${LIB_PACKAGE_NAME} "${EXTRA_SHARED_LIBS}")
 if(DNNL_LIBRARY_TYPE STREQUAL "STATIC")
-    target_link_libraries_install(${DNNL_LIBRARY_NAME} "${EXTRA_STATIC_LIBS}")
+    target_link_libraries_install(${LIB_PACKAGE_NAME} "${EXTRA_STATIC_LIBS}")
 endif()
 
-set(LIB_EXPORT_NAME "${DNNL_LIBRARY_NAME}-targets")
-install(TARGETS ${DNNL_LIBRARY_NAME}
+set(LIB_EXPORT_NAME "${LIB_PACKAGE_NAME}-targets")
+install(TARGETS ${LIB_PACKAGE_NAME}
     EXPORT "${LIB_EXPORT_NAME}"
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
@@ -216,11 +218,11 @@ endforeach()
 
 # Write version and package config files
 set(LIB_CONFIG_GENERATE_DIR "${CMAKE_CURRENT_BINARY_DIR}/generated")
-set(LIB_CONFIG_INSTALL_DIR "${CMAKE_INSTALL_LIBDIR}/cmake/${DNNL_LIBRARY_NAME}")
+set(LIB_CONFIG_INSTALL_DIR "${CMAKE_INSTALL_LIBDIR}/cmake/${LIB_PACKAGE_NAME}")
 set(LIB_VERSION_FILE
-    "${LIB_CONFIG_GENERATE_DIR}/${DNNL_LIBRARY_NAME}-config-version.cmake")
+    "${LIB_CONFIG_GENERATE_DIR}/${LIB_PACKAGE_NAME}-config-version.cmake")
 set(LIB_CONFIG_FILE
-    "${LIB_CONFIG_GENERATE_DIR}/${DNNL_LIBRARY_NAME}-config.cmake")
+    "${LIB_CONFIG_GENERATE_DIR}/${LIB_PACKAGE_NAME}-config.cmake")
 write_basic_package_version_file(
     "${LIB_VERSION_FILE}"
     VERSION ${PROJECT_VERSION}
@@ -231,7 +233,7 @@ configure_package_config_file(
     INSTALL_DESTINATION ${LIB_CONFIG_INSTALL_DIR})
 install(FILES ${LIB_CONFIG_FILE} ${LIB_VERSION_FILE}
     DESTINATION ${LIB_CONFIG_INSTALL_DIR})
-string(TOUPPER "${DNNL_LIBRARY_NAME}::" LIB_NAMESPACE)
+string(TOUPPER "${LIB_PACKAGE_NAME}::" LIB_NAMESPACE)
 install(EXPORT ${LIB_EXPORT_NAME}
     NAMESPACE ${LIB_NAMESPACE}
     DESTINATION ${LIB_CONFIG_INSTALL_DIR})
