--- a/src/cpu/aarch64/CMakeLists.txt
+++ b/src/cpu/aarch64/CMakeLists.txt
@@ -44,7 +44,7 @@ if(NOT DNNL_CPU_RUNTIME STREQUAL "THREADPOOL")
     list(REMOVE_ITEM SOURCES ${ACL_THREADPOOL_FILES})
 endif()
 
-set(OBJ_LIB ${DNNL_LIBRARY_NAME}_cpu_aarch64)
+set(OBJ_LIB ${LIB_PACKAGE_NAME}_cpu_aarch64)
 add_library(${OBJ_LIB} OBJECT ${SOURCES})
 set_property(GLOBAL APPEND PROPERTY DNNL_LIB_DEPS
     $<TARGET_OBJECTS:${OBJ_LIB}>)
