--- a/src/cpu/ppc64/CMakeLists.txt
+++ b/src/cpu/ppc64/CMakeLists.txt
@@ -21,7 +21,7 @@ file(GLOB_RECURSE SOURCES
 set_source_files_properties(${SOURCES}
     PROPERTIES COMPILE_FLAGS "-O3 -funroll-loops")
 
-set(OBJ_LIB ${DNNL_LIBRARY_NAME}_cpu_ppc64)
+set(OBJ_LIB ${LIB_PACKAGE_NAME}_cpu_ppc64)
 add_library(${OBJ_LIB} OBJECT ${SOURCES})
 set_property(GLOBAL APPEND PROPERTY DNNL_LIB_DEPS
     $<TARGET_OBJECTS:${OBJ_LIB}>)
