--- a/src/gpu/sycl/CMakeLists.txt
+++ b/src/gpu/sycl/CMakeLists.txt
@@ -1,5 +1,5 @@
 #===============================================================================
-# Copyright 2022 Intel Corporation
+# Copyright 2022-2023 Intel Corporation
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -40,7 +40,7 @@ else()
        )
 endif()
 
-set(OBJ_LIB ${DNNL_LIBRARY_NAME}_gpu_sycl)
+set(OBJ_LIB ${LIB_PACKAGE_NAME}_gpu_sycl)
 add_library(${OBJ_LIB} OBJECT ${SOURCES})
 set_property(GLOBAL APPEND PROPERTY DNNL_LIB_DEPS
     $<TARGET_OBJECTS:${OBJ_LIB}>)
