--- a/src/graph/interface/CMakeLists.txt
+++ b/src/graph/interface/CMakeLists.txt
@@ -1,5 +1,5 @@
 #===============================================================================
-# Copyright 2021-2022 Intel Corporation
+# Copyright 2021-2023 Intel Corporation
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -19,7 +19,7 @@ file(GLOB SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/*.[ch]pp
     )
 
-set(OBJ_LIB ${DNNL_LIBRARY_NAME}_graph_interface)
+set(OBJ_LIB ${LIB_PACKAGE_NAME}_graph_interface)
 add_library(${OBJ_LIB} OBJECT ${SOURCES})
 
 set_property(GLOBAL APPEND PROPERTY DNNL_LIB_DEPS
