--- a/examples/CMakeLists.txt.in
+++ b/examples/CMakeLists.txt.in
@@ -1,5 +1,5 @@
 #===============================================================================
-# Copyright 2019-2022 Intel Corporation
+# Copyright 2019-2023 Intel Corporation
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -135,7 +135,7 @@ get_filename_component(DNNL_CONFIGURATION "${DNNL_CONFIGURATION}" NAME)
 # The hint can be used to find CMake config in oneAPI directory layout.
 set(ONEAPI_CMAKE_CONFIG_HINT "../..")
 
-find_package(@DNNL_LIBRARY_NAME@ @PROJECT_VERSION@ CONFIG REQUIRED HINTS ${DNNLROOT} ${ONEAPI_CMAKE_CONFIG_HINT})
+find_package(@LIB_PACKAGE_NAME@ @PROJECT_VERSION@ CONFIG REQUIRED HINTS ${DNNLROOT} ${ONEAPI_CMAKE_CONFIG_HINT})
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${DNNL_COMPILE_FLAGS}")
 
@@ -170,8 +170,8 @@ endfunction()
 #   test -- "test" to mark executable as a test, "" otherwise
 function(register_example name srcs test)
     add_executable(${name} ${srcs})
-    string(TOUPPER "@DNNL_LIBRARY_NAME@" LIB_NAMESPACE)
-    target_link_libraries(${name} ${LIB_NAMESPACE}::@DNNL_LIBRARY_NAME@ ${LIBM})
+    string(TOUPPER "@LIB_PACKAGE_NAME@" LIB_NAMESPACE)
+    target_link_libraries(${name} ${LIB_NAMESPACE}::@LIB_PACKAGE_NAME@ ${LIBM})
     if("x${test}" STREQUAL "xtest")
         add_test(${name} ${name})
         maybe_configure_test("${example_name}" TEST)
