--- a/src/gpu/ocl/CMakeLists.txt
+++ b/src/gpu/ocl/CMakeLists.txt
@@ -1,5 +1,5 @@
 #===============================================================================
-# Copyright 2019-2021 Intel Corporation
+# Copyright 2019-2023 Intel Corporation
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -37,7 +37,7 @@ gen_gpu_kernel_list(
 
 list(APPEND SOURCES ${kernel_list_src})
 
-set(OBJ_LIB ${DNNL_LIBRARY_NAME}_gpu_ocl)
+set(OBJ_LIB ${LIB_PACKAGE_NAME}_gpu_ocl)
 add_library(${OBJ_LIB} OBJECT ${SOURCES})
 set_property(GLOBAL APPEND PROPERTY DNNL_LIB_DEPS
     $<TARGET_OBJECTS:${OBJ_LIB}>)
