--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -71,7 +71,8 @@ if(DNNL_SYCL_HIP)
         ${CMAKE_CURRENT_SOURCE_DIR}/primitives/eltwise.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/primitives/reduction.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/primitives/matmul.cpp
-        ${CMAKE_CURRENT_SOURCE_DIR}/matmul_perf.cpp)
+        ${CMAKE_CURRENT_SOURCE_DIR}/matmul_perf.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/primitives/inner_product.cpp)
 endif()
 
 # Skip SYCL, GPU and cross-engine examples
