--- a/cmake/config.cmake.in
+++ b/cmake/config.cmake.in
@@ -42,3 +42,9 @@ set(CMAKE_MODULE_PATH ${DNNL_ORIGINAL_CMAKE_MODULE_PATH})
 
 include("${CMAKE_CURRENT_LIST_DIR}/@LIB_EXPORT_NAME@.cmake")
 check_required_components("@LIB_PACKAGE_NAME@")
+
+if(DNNL_CPU_RUNTIME STREQUAL "SYCL" OR DNNL_CPU_RUNTIME STREQUAL "DPCPP" OR
+   DNNL_GPU_RUNTIME STREQUAL "SYCL" OR DNNL_GPU_RUNTIME STREQUAL "DPCPP")
+    set(DNNL_COMPILE_FLAGS "-fsycl")
+    @HANDLE_BUNDLE_DEBUG_SYCL_CONFIGURATION@
+endif()
