api, src: common: add group normalization

--- a/include/oneapi/dnnl/dnnl_config.h.in
+++ b/include/oneapi/dnnl/dnnl_config.h.in
@@ -163,6 +163,7 @@
 #cmakedefine01 BUILD_CONVOLUTION
 #cmakedefine01 BUILD_DECONVOLUTION
 #cmakedefine01 BUILD_ELTWISE
+#cmakedefine01 BUILD_GROUP_NORMALIZATION
 #cmakedefine01 BUILD_INNER_PRODUCT
 #cmakedefine01 BUILD_LAYER_NORMALIZATION
 #cmakedefine01 BUILD_LRN
